--- a/Quiron.LojaVirtual.Dominio/Quiron.LojaVirtual.Dominio.csproj
+++ b/Quiron.LojaVirtual.Dominio/Quiron.LojaVirtual.Dominio.csproj
@@ -83,6 +83,7 @@
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
+    <Compile Include="Repositorio\Produtos.Repositorio.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
