--- a/Quiron.LojaVirtual.Web/Quiron.LojaVirtual.Web.csproj
+++ b/Quiron.LojaVirtual.Web/Quiron.LojaVirtual.Web.csproj
@@ -115,6 +115,7 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="HtmlHelpers\PaginacaoHelpers.cs" />
+    <Compile Include="Models\ProdutosViewModel.cs" />
     <Compile Include="Models\Paginacao.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
